Harden security, optimize boot readiness, add VFS storage mode to server instances
- Add algorithm whitelists to SecurityProfile (SSH ciphers, KEX, MACs, TLS suites, AS2)
- Strengthen TLS terminator weak cipher blocking with configurable flag
- Optimize ServiceReadinessValidator: single batched query, skip per-column validation
- Add retry logic to ClusterRegistrationService for cold-start DB races
- Add defaultStorageMode (PHYSICAL/VIRTUAL) to ServerInstance entity, DTOs, and UI
- Harden SFTP/FTP/Gateway configs with SecurityProfile algorithm enforcement
- Add V32 migration for server_instances.default_storage_mode column
- Fix config-service controllers: consistent security annotations

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>